ProTrackDev/force-app/main/default/objects/TR_Apex_Test_Run_Result__c/TR_Apex_Test_Run_Result__c.object-meta.xml
<CustomObject>
    <description>This objects contains the result of test rns</description>
    <label>Apex Test Run Result</label>
    <nameField>
        <displayFormat>ATRR-{0000}</displayFormat>
        <label>ATRR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Test Run Results</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>