ProTrackDev/force-app/main/default/objects/TR_Apex_Test_Run_Result__c/fields/TR_Covered_Lines__c.field-meta.xml
<CustomField>
    <fullName>TR_Covered_Lines__c</fullName>
    <description>Total number of lines covered</description>
    <inlineHelpText>Total number of lines covered</inlineHelpText>
    <label>Covered Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>