ProTrackDev/force-app/main/default/objects/TR_Apex_Test_Run_Result__c/fields/TR_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>TR_Org_ID__c</fullName>
    <label>Org ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>00D0p0000000TwfEAE</fullName>
                <label>KIN SPRINTST</label>
            </value>
            <value>
                <fullName>00D0T0000008qhuUAA</fullName>
                <label>KMC SPRINTST</label>
            </value>
            <value>
                <fullName>00D6D0000008d4MUAQ</fullName>
                <label>KMC TEST</label>
            </value>
            <value>
                <fullName>00D1y0000008mz5EAA</fullName>
                <label>KMC MIG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>