ProTrackDev/force-app/main/default/objects/TR_Apex_Test_Run_Result__c/fields/TR_Outcome__c.field-meta.xml
<CustomField>
    <fullName>TR_Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>