ProTrackDev/force-app/main/default/objects/TR_Apex_Test_Run_Result__c/fields/TR_Skipped_Tests__c.field-meta.xml
<CustomField>
    <fullName>TR_Skipped_Tests__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Skipped Tests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>