ProTrackDev/force-app/main/default/objects/TR_Apex_Test_Run_Result__c/fields/TR_Test_Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Execution_Time__c</fullName>
    <inlineHelpText>Defined in ms</inlineHelpText>
    <label>Test Execution Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>