ProTrackDev/force-app/main/default/objects/TR_Apex_Test_Run_Result__c/fields/TR_Test_Run_Coverage__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Run_Coverage__c</fullName>
    <label>Test Run Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>