ProTrackDev/force-app/main/default/objects/TR_Apex_Test_Run_Result__c/fields/TR_Tests_Ran__c.field-meta.xml
<CustomField>
    <fullName>TR_Tests_Ran__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tests Ran</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>