ProTrackDev/force-app/main/default/objects/TR_Apex_Test_Run_Result__c/fields/TR_Total_Lines__c.field-meta.xml
<CustomField>
    <fullName>TR_Total_Lines__c</fullName>
    <description>Total lines of code</description>
    <inlineHelpText>Total lines of code</inlineHelpText>
    <label>Total Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>