ProTrackDev/force-app/main/default/objects/TR_Apex_Test_Run_Result__c/listViews/Latest_Test_Runs.listView-meta.xml
<ListView>
    <fullName>Latest_Test_Runs</fullName>
    <columns>NAME</columns>
    <columns>TR_Org_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TR_Outcome__c</columns>
    <columns>TR_Test_Run_Coverage__c</columns>
    <columns>TR_Test_Execution_Time__c</columns>
    <columns>TR_Tests_Ran__c</columns>
    <columns>TR_Passing_Tests__c</columns>
    <columns>TR_Failing_Tests__c</columns>
    <filterScope>Everything</filterScope>
    <label>Latest Test Runs</label>
</ListView>